--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,199 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Mali&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
+body,
+html {
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  font-family: "Mali", cursive;
+	user-select: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.img {
+  background-image: url("https://i.ibb.co/zf10dL5/john-towner-Jg-Oe-Ru-GD-Y4-unsplash.jpg");
+  max-width: 100vw;
+  height: 100vh;
+	background-color: #040415;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  resize: both;
+  filter: blur(8px);
+  z-index: 1;
+}
+
+.container {
+  height: 100vh;
+  z-index: 100;
+  color: white;
+  width: 100vw;
+  border-radius: 50px;
+}
+
+.weather {
+  word-wrap: break-word;
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.search {
+  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  position: absolute;
+  bottom: 10px;
+  border-top-left-radius: 10rem;
+  border-top-right-radius: 10rem;
+  left: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+  width: 98.8%;
+}
+
+input {
+  color: white;
+  width: 50%;
+  outline: none;
+  font-size: 150%;
+  background-color: transparent;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  margin-right: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
+  padding: 10px 30px;
+}
+
+.icon {
+  margin: 0;
+  outline: none;
+  color: white;
+  font-size: 110%;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
+  background-color: transparent;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn {
+  cursor: pointer;
+  color: rgb(7, 7, 86);
+  font-weight: 700;
+  background-color: rgba(207, 177, 5, 0.887);
+  outline: none;
+  font-size: 150%;
+  padding: 10px 20px;
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.9);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#temp {
+  font-size: 400%;
+  display: flex;
+  align-items: flex-start;
+}
+
+#time {
+  font-size: 60%;
+  margin-top: 20px;
+}
+
+.place {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  font-size: 200%;
+  margin-right: 30px;
+}
+
+.deg {
+  margin-left: 5px;
+  font-size: 50%;
+  margin-right: 30px;
+}
+
+.emoji {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  font-size: 160%;
+}
+
+.cred {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
   color: white;
+  font-size: 150%;
 }
 
-.App-link {
-  color: #61dafb;
+#emoji {
+  pointer-events: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#emjType {
+  margin-left: auto;
+  margin-top: 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  input,
+  .btn,
+  .icon {
+    font-size: 110%;
   }
-  to {
-    transform: rotate(360deg);
+  input {
+    padding: 8px 10px;
+  }
+  .search {
+    border-top-left-radius: 5rem;
+    border-top-right-radius: 5rem;
+    width: 96vw;
+  }
+  .weather {
+    font-size: 80%;
+  }
+  .cred {
+    left: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .place,
+  .deg {
+    margin-right: auto;
+  }
+  .place {
+    margin-left: 10px;
+    margin-right: 15px;
+  }
+  #temp {
+    margin-left: 30px;
+  }
+  .emoji {
+    margin-right: 40px;
+  }
+  .search {
+    width: 94.5vw;
   }
 }
