--- a/src/App.css
+++ b/src/App.css
@@ -112,12 +112,19 @@ input {
   border: 0;
 }
 
-button{
-	padding: 12px 20px;
-	font-size: 1.5rem;
-	font-weight: 700;
-	border-radius: 50px;
-	background-color: #b79c08;
+button {
+  padding: 12px 20px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+  background-color: #b79c08;
+	cursor: pointer;
+}
+
+button:hover{
+	transform: scale(1.1);
+	background-color: #f1cf13;
 }
 
 .cred {
@@ -162,11 +169,15 @@ button{
   }
   .icon {
     margin: 0 10px;
+		height: 50px;
+		width: 50px;
   }
   input {
+    font-size: 1.2rem;
     margin: 0 10px;
   }
   button {
+    font-size: 1.2rem;
     margin: 0 10px;
   }
 }
