--- a/src/App.css
+++ b/src/App.css
@@ -119,12 +119,12 @@ button {
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   background-color: #b79c08;
-	cursor: pointer;
+  cursor: pointer;
 }
 
-button:hover{
-	transform: scale(1.1);
-	background-color: #f1cf13;
+button:hover {
+  transform: scale(1.1);
+  background-color: #f1cf13;
 }
 
 .cred {
@@ -132,8 +132,7 @@ button:hover{
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  position: fixed;
-  bottom: 10px;
+	margin-top: 30px;
 }
 
 .credText {
@@ -169,8 +168,8 @@ button:hover{
   }
   .icon {
     margin: 0 10px;
-		height: 50px;
-		width: 50px;
+    height: 50px;
+    width: 50px;
   }
   input {
     font-size: 1.2rem;
